# fast_zero

./: .gitignore  pyproject.toml
fast_zero/: app.py  schemas.py  security.py
fast_zero/routes/: auth.py  todos.py  users.py
migrations/versions/: 2a97f34e85c2_create_todos_table.py  9e3af3c2c88a_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_todo.py  test_users.py
